--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: BioMedR
 Type: Package
-Version: 0.99.26
+Version: 0.99.27
 Date: 2017-03-28
 Title: Generating Various Molecular Representations for Chemicals, Proteins, DNAs/RNAs and Their Interactions
 Description: The BioMedR package offers an R/Bioconductor package generating various molecular representations for chemicals, proteins, DNAs/RNAs and their interactions. 
@@ -13,7 +13,7 @@ URL: https://github.com/wind22zhu/BioMedR
 BugReports: https://github.com/wind22zhu/BioMedR/issues
 LazyData: yes
 Imports: RCurl, rjson, rcdk (>= 3.3.2), foreach, doParallel, Biostrings, GOSemSim,
-        ChemmineR, fmcsR, pls, randomForest, utils, stats, graphics, methods, kohonen,
+        ChemmineR, fmcsR, pls, randomForest, utils, stats, graphics, methods, 
         org.Hs.eg.db, ChemmineOB
 Suggests: RUnit, BiocGenerics
 biocViews: Software, DataImport, DataRepresentation, FeatureExtraction,
