--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,4 @@ biocViews: Software, DataImport, DataRepresentation, FeatureExtraction,
         Cheminformatics, BiomedicalInformatics, Proteomics, GO,
         GraphAndNetwork, SystemsBiology
 NeedsCompilation: no
+PackageStatus: Deprecated
