--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,12 @@ URL: https://github.com/wind22zhu/BioMedR
 BugReports: https://github.com/wind22zhu/BioMedR/issues
 LazyData: yes
 Imports: RCurl, rjson, rcdk (>= 3.3.2), Biostrings, GOSemSim, MASS,
-        ChemmineR, fmcsR, pls, randomForest, utils, stats, graphics,
-        methods, org.Hs.eg.db
+        ChemmineOB, ChemmineR, fmcsR, pls, randomForest, utils, stats,
+        graphics, methods, org.Hs.eg.db
 Suggests: RUnit, BiocGenerics
 biocViews: Software, DataImport, DataRepresentation, FeatureExtraction,
         Cheminformatics, BiomedicalInformatics, Proteomics, GO,
         GraphAndNetwork, SystemsBiology
 NeedsCompilation: no
 RoxygenNote: 6.1.1
-Packaged: 2019-07-04 16:05:09 UTC; root
+Packaged: 2019-07-15 16:16:22 UTC; root
