--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,9 @@ export(extrDrugMACCSComplete)
 export(extrDrugMDE)
 export(extrDrugMannholdLogP)
 export(extrDrugMomentOfInertia)
+export(extrDrugOBFP2)
+export(extrDrugOBFP3)
+export(extrDrugOBFP4)
 export(extrDrugPetitjeanNumber)
 export(extrDrugPetitjeanShapeIndex)
 export(extrDrugPubChem)
@@ -165,6 +168,7 @@ export(twoSeqSim)
 export(clusterPlotSOMmap)
 import(Biostrings)
 import(ChemmineR)
+import(ChemmineOB)
 import(MASS)
 import(GOSemSim)
 import(fmcsR)
