--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,6 +171,7 @@ import(ChemmineR)
 import(ChemmineOB)
 import(MASS)
 import(GOSemSim)
+import(doParallel)
 import(fmcsR)
 import(org.Hs.eg.db)
 importFrom(RCurl,getURL)
