--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(clusterMDS)
 export(clusterStat)
 export(convAPtoFP)
 export(convSDFtoAP)
+export(convMolFormat)
 export(extrDNADAC)
 export(extrDNADACC)
 export(extrDNADCC)
